# bee_guard

./: .gitignore  Pipfile  README.md  analyzator.py  analyze_collected_data.ipynb  analyzer.py  apo_eq_settings.txt  audio.py  constants.py  enums.py  example_packets_dataframe.py  logger_setup.py  main.py  mavlink.py  mavlink_wrapper.py  pyproject.toml  sound_controller.py
classes/: analyzer.py  drone_controller.py  logger_mixin.py  sound_controller.py
collected_data/: 05-16-2024_10-29-02.csv  05-17-2024_11-07-26.csv  05-17-2024_12-31-02.csv  05-18-2024_15-46-16.csv  05-18-2024_19-15-05.csv  0_8khz_05-25-2024_10-07-03.csv  6khz_23khz_05-25-2024_06-18-33.csv  approx_200hz_repeated_correlating_05-25-2024_11-37-07.csv  approx_200hz_repeated_correlating_05-25-2024_11-56-30.csv  approx_200hz_repeated_correlating_05-25-2024_12-21-40.csv  last_run_dataframe.csv  results
configs/: BTFL_cli_20240131_203759_INITIAL_CONFIG_BACKUP.txt  BTFL_cli_backup_20240208_034029_LATEST.txt  BTFL_cli_backup_20240209_002336__BEFORE_FLASH.txt
drone_files/configs/: BTFL_cli_backup_20240208_021613_WORKING_MAVLINK_ON_57600.txt  MOTORS(all4)_AND_GPS_MOVED_TO_1st_PORT.param  MOTORS(all4)_AND_GPS_WORK_ignore_flowrate_gps.param
drone_files/firmwares/: 420stableSpeedybeef4.hex  f405mini-latest-heli-with-bl.hex  latestF4V3_with_bl.hex
firmwares/: arducopter.apj  arducopter_with_bl.hex  f405mini-latest-heli.hex  latestF4V3.hex
mock_data/: 10_RAW_IMU_anomaly_packets.csv
sample_data/: 100_RAW_IMU_reference_packets.csv
